# httpx_tutorial

./: .gitignore  pyproject.toml
src/: main.py
