[build-system]
requires = [
    "setuptools >= 68.2.2",
    "setuptools-scm[toml] >= 7.1.0",
    "wheel >= 0.41.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "httpx_tutorial"
version = "0.1.0"
dependencies = [
    "setuptools >= 68.2.2",
    "setuptools-scm[toml] >= 7.1.0",
    "types-setuptools==68.2.0.0",    # Bump types-* only with mypy
    "typing-extensions ~= 4.8.0",    # Directly import Self from typing on Python 3.11+
    "wheel >= 0.41.2",

    "httpx",
]

[project.optional-dependencies]
test = [
    "bashate ~= 2.1.1",
    'coverage ~= 7.3.4; python_version >= "3.11"',
    'coverage[toml] ~= 7.3.4; python_version <= "3.10"',
    "mypy ~= 1.7.1",
    "pylint ~= 3.0.3",
    'pyright==1.1.342; platform_system == "Linux"',
    "pytest ~= 7.4.3",
    "pytest-cov ~= 4.1.0",
    "pytest-dependency ~= 0.5.1",
    "pytest-instafail ~= 0.5.0",
    "pytest-mypy ~= 0.10.3",
    "pytest-pylint ~= 0.21.0",
    "pytest-randomly ~= 3.15.0",
    "pytest-ruff ~= 0.2.1",
    "pytest-xdist ~= 3.5.0",
    "refurb ~= 1.26.0",
    "ruff ~= 0.1.9",
    "sphinx ~= 7.2.6",
    "vulture ~= 2.10",
]
